Edited wiki page through web user interface.

--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -1,4 +1,4 @@
-#summary One-sentence summary of this page.
+#summary Installation of IDA-Presentation
 
 = Decencies =
 
@@ -10,11 +10,10 @@
 
 On Debian-based distros this should install all depecies (except tinyxml): 
 
-`sudo apt-get install libcurl4-openssl-dev libopenscenegraph-dev libboost-iostreams-dev`
+`sudo apt-get install libcurl4-openssl-dev libopenscenegraph-dev libboost-iostreams-dev libtinyxml-dev`
 
-Tinyxml in not currently on Ubuntu's repos. 
-
-libtinyxml-dev_2.5.3-3_i386.deb.
+Tinyxml is not currently on Ubuntu's repos. You can install Debian package:
+http://packages.debian.org/source/sid/tinyxml 
 
 
 = Compiling =
