--- a/wiki/side.wiki
+++ b/wiki/side.wiki
@@ -1,13 +1,1 @@
-e.
-
-= Introduction =
-
-SIDE.
-
-
-= Details =
-
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+[http://code.google.com/p/idapresentation/wiki/Installation label] http://domain/page
