--- a/wiki/side.wiki
+++ b/wiki/side.wiki
@@ -1,2 +1,2 @@
   * [http://code.google.com/p/idapresentation/wiki/Installation Installation] 
-  * [http://code.google.com/p/idapresentation/wiki/Compiling Compile] 
+  * [http://code.google.com/p/idapresentation/wiki/Instroduction Introduction] 
