--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -11,7 +11,7 @@
 
 On Debian-based distros this should install all depecies (except tinyxml): 
 
-`sudo apt-get install libcurl4-openssl-dev libopenscenegraph-dev libboost-iostreams-dev libtinyxml-dev`
+`apt-get install libcurl4-openssl-dev libopenscenegraph-dev libboost-iostreams-dev libtinyxml-dev`
 
 Tinyxml is not currently on Ubuntu's repos. You can install Debian package:
 http://packages.debian.org/source/sid/tinyxml 
